--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
            <div class="header-content">
              <!-- Add your profile picture here -->
                <h1>ABIJITH.V</h1></h1>
-         <img src="/Nishanth.jpeg" alt="Your" class="profile-picture">
-             <p>ㅤㅤㅤㅤㅤ  studing</p>
+         <img src="/" alt="Your" class="profile-picture">
+             <p>ㅤㅤㅤㅤㅤ  studying</p>
 
            </div>
        <header>
