--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
            <div class="header-content">
              <!-- Add your profile picture here -->
                <h1>ABIJITH.V</h1></h1>
-         <img src="/" alt="Your" class="profile-picture">
+         <img src="IMG-20231026-WA0000.jpg" alt="Your" class="profile-picture">
              <p>ㅤㅤㅤㅤㅤ  studying</p>
 
            </div>
